Building out high score view.